--- a/testAssignment/View/cells/CategoryCollectionViewCell.xib
+++ b/testAssignment/View/cells/CategoryCollectionViewCell.xib
@@ -25,7 +25,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="74" height="145"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="phones" translatesAutoresizingMaskIntoConstraints="NO" id="eJ0-Y9-BT6">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Phones" translatesAutoresizingMaskIntoConstraints="NO" id="eJ0-Y9-BT6">
                         <rect key="frame" x="16" y="10" width="42" height="42"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="42" id="aif-ZB-31m"/>
@@ -33,7 +33,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phones" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7h-hE-lWH">
-                        <rect key="frame" x="15.333333333333332" y="61.999999999999993" width="43.666666666666671" height="14.666666666666664"/>
+                        <rect key="frame" x="15.333333333333332" y="62" width="43.666666666666671" height="13"/>
                         <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="11"/>
                         <color key="textColor" red="0.65098039215686276" green="0.65490196078431373" blue="0.6705882352941176" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -61,6 +61,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="phones" width="28.333333969116211" height="25.333333969116211"/>
+        <image name="Phones" width="28.333333969116211" height="25.333333969116211"/>
     </resources>
 </document>
