--- a/testAssignment/Base.lproj/Main.storyboard
+++ b/testAssignment/Base.lproj/Main.storyboard
@@ -188,13 +188,13 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't have an account?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZE-Ii-Ubv">
-                                <rect key="frame" x="30" y="586.33333333333337" width="144" height="15"/>
+                                <rect key="frame" x="30" y="586.33333333333337" width="143.66666666666666" height="14"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="12"/>
                                 <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jdC-ml-ovh">
-                                <rect key="frame" x="179" y="586.33333333333337" width="43" height="15"/>
+                                <rect key="frame" x="178.66666666666666" y="586.33333333333337" width="43" height="14"/>
                                 <fontDescription key="fontDescription" name="Montserrat-SemiBold" family="Montserrat" pointSize="12"/>
                                 <color key="textColor" red="0.1450980392" green="0.30980392159999998" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -504,7 +504,7 @@
                                                 </constraints>
                                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="OeE-Pj-IkB">
                                                     <size key="itemSize" width="128" height="128"/>
-                                                    <size key="estimatedItemSize" width="50" height="149"/>
+                                                    <size key="estimatedItemSize" width="133" height="169"/>
                                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -583,6 +583,15 @@
                                                 </collectionViewFlowLayout>
                                                 <cells/>
                                             </collectionView>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" estimatedSectionHeaderHeight="-1" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="ycC-1j-7BZ">
+                                                <rect key="frame" x="66.666666666666686" y="44" width="297" height="200"/>
+                                                <inset key="separatorInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
+                                                <color key="sectionIndexBackgroundColor" name="backGround"/>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="9c4-4o-EeY" id="D0b-MG-Ucf"/>
+                                                    <outlet property="delegate" destination="9c4-4o-EeY" id="t2k-AG-sFX"/>
+                                                </connections>
+                                            </tableView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
@@ -593,6 +602,7 @@
                                             <constraint firstItem="qgJ-hG-kDk" firstAttribute="leading" secondItem="msY-QU-GJj" secondAttribute="leading" constant="50" id="Crx-rb-qfi"/>
                                             <constraint firstAttribute="trailing" secondItem="Hps-x3-UwU" secondAttribute="trailing" constant="15" id="D4S-0d-0fQ"/>
                                             <constraint firstItem="3T9-Se-Jn9" firstAttribute="leading" secondItem="msY-QU-GJj" secondAttribute="leading" constant="10" id="GIx-bf-2rO"/>
+                                            <constraint firstItem="ycC-1j-7BZ" firstAttribute="width" secondItem="qgJ-hG-kDk" secondAttribute="width" multiplier="0.9" id="GVE-Fa-Cbe"/>
                                             <constraint firstItem="3T9-Se-Jn9" firstAttribute="top" secondItem="2IT-ki-Dfm" secondAttribute="bottom" constant="22" id="Joi-Y4-R14"/>
                                             <constraint firstItem="2IT-ki-Dfm" firstAttribute="top" secondItem="Hel-cv-tO4" secondAttribute="bottom" constant="13" id="SBk-gJ-RXx"/>
                                             <constraint firstAttribute="trailing" secondItem="2IT-ki-Dfm" secondAttribute="trailing" constant="10" id="TOx-Y9-d2s"/>
@@ -606,7 +616,9 @@
                                             <constraint firstItem="efO-SS-Rx1" firstAttribute="top" secondItem="3T9-Se-Jn9" secondAttribute="bottom" constant="13" id="dqV-Pm-gFq"/>
                                             <constraint firstItem="2IT-ki-Dfm" firstAttribute="leading" secondItem="msY-QU-GJj" secondAttribute="leading" constant="10" id="mvV-rJ-z3e"/>
                                             <constraint firstItem="lXy-Qa-2mq" firstAttribute="bottom" secondItem="kca-wu-3pE" secondAttribute="top" constant="-13" id="nsm-u3-1fP"/>
+                                            <constraint firstItem="ycC-1j-7BZ" firstAttribute="centerX" secondItem="msY-QU-GJj" secondAttribute="centerX" id="qjO-Ba-oyA"/>
                                             <constraint firstAttribute="trailing" secondItem="kca-wu-3pE" secondAttribute="trailing" constant="10" id="s2u-Nr-ubM"/>
+                                            <constraint firstItem="ycC-1j-7BZ" firstAttribute="top" secondItem="qgJ-hG-kDk" secondAttribute="bottom" id="sqd-6b-fbN"/>
                                             <constraint firstAttribute="trailing" secondItem="Hel-cv-tO4" secondAttribute="trailing" constant="10" id="tDr-wB-CGV"/>
                                             <constraint firstItem="efO-SS-Rx1" firstAttribute="leading" secondItem="msY-QU-GJj" secondAttribute="leading" constant="10" id="uPV-qE-ent"/>
                                             <constraint firstItem="qgJ-hG-kDk" firstAttribute="top" secondItem="msY-QU-GJj" secondAttribute="top" constant="10" id="vti-Cs-vPr"/>
@@ -642,6 +654,7 @@
                     <connections>
                         <outlet property="brandsCollectionView" destination="kca-wu-3pE" id="IKK-UX-gb0"/>
                         <outlet property="categoryCollectionView" destination="Hps-x3-UwU" id="YoN-qb-4Gf"/>
+                        <outlet property="dropDownMenu" destination="ycC-1j-7BZ" id="QaS-1F-29S"/>
                         <outlet property="flashSaleCollectionView" destination="efO-SS-Rx1" id="2p3-Ng-4Bd"/>
                         <outlet property="latestCollectionView" destination="2IT-ki-Dfm" id="fYr-GG-QHx"/>
                         <outlet property="navigationBar" destination="epp-eo-INt" id="Okv-tN-X49"/>
